chore: enable optimize, bump to v0.4.3

--- a/.github/workflows/publish-tile.yml
+++ b/.github/workflows/publish-tile.yml
@@ -20,3 +20,4 @@ jobs:
           token: ${{ secrets.TESSL_API_TOKEN }}
           review: 'true'
           review-threshold: '80'
+          review-optimize: 'true'
